--- a/flexbox.css
+++ b/flexbox.css
@@ -133,7 +133,48 @@ button {
   .attribution a:hover {
     color: var(--black);
   }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1012px) {
+    body {
+        display: flex;
+        width: 100%;
+        overflow: scroll;
+        flex-wrap: wrap;
+      }
+    
+      .cars {
+        padding: 50px 0;
+        flex-direction: column;
+      }
+    
+      .sedans {
+        border-radius: 7px 0 0 7px;
+      }
+    
+      .luxury {
+        border-radius: 0 0 7px 7px;
+      }
+      .suvs{
+          border-radius: 0 7px 7px 0 ;
+      }
+      .nav{
+        text-decoration: none;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: auto;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-size: 50px;
+        padding-bottom: 0px;
+        padding-top: 40px;
+    }
+    header{
+        display: flex;
+      width: 100%;
+      overflow: scroll;
+      flex-wrap: wrap;
+    }
+}
+@media only screen and (max-width: 672px) {
     body {
       display: flex;
       width: 100%;
@@ -147,14 +188,14 @@ button {
     }
   
     .sedans {
-      border-radius: 7px 0 0 7px;
+      border-radius: 7px 7px 0 0;
     }
   
     .luxury {
       border-radius: 0 0 7px 7px;
     }
     .suvs{
-        border-radius: 0 7px 7px 0 ;
+        border-radius: 0 0 0 0 ;
     }
   
     article p {
@@ -166,7 +207,7 @@ button {
       width: auto;
       padding-bottom: 10px;
     }
-     .nav{
+    .nav{
         text-decoration: none;
         display: flex;
         flex-direction: row;
@@ -184,7 +225,7 @@ button {
       flex-wrap: wrap;
     }
   }
- 
+  
 p{
     color: hsla(0, 0%, 100%, 0.75);
 }
